new CPT codes + removed mobidity and mortality as predictors

--- a/tables/postPredictors16.tex
+++ b/tables/postPredictors16.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:12 2020
+% Tue Oct 27 15:32:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -13,7 +13,7 @@
 \captionof{table}{female} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:13 2020
+% Tue Oct 27 15:32:03 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -27,7 +27,7 @@
 \captionof{table}{male} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:14 2020
+% Tue Oct 27 15:32:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -41,7 +41,7 @@
 \captionof{table}{race-asian} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:14 2020
+% Tue Oct 27 15:32:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -55,7 +55,7 @@
 \captionof{table}{race-black} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:15 2020
+% Tue Oct 27 15:32:05 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -69,7 +69,7 @@
 \captionof{table}{race-nativeam} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:16 2020
+% Tue Oct 27 15:32:06 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -83,7 +83,7 @@
 \captionof{table}{race-aip} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:16 2020
+% Tue Oct 27 15:32:06 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -97,7 +97,7 @@
 \captionof{table}{race-white} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:17 2020
+% Tue Oct 27 15:32:07 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -111,7 +111,7 @@
 \captionof{table}{race-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:18 2020
+% Tue Oct 27 15:32:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -125,7 +125,7 @@
 \captionof{table}{hispanic-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:18 2020
+% Tue Oct 27 15:32:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -139,7 +139,7 @@
 \captionof{table}{hispanic-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:19 2020
+% Tue Oct 27 15:32:09 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -153,21 +153,35 @@
 \captionof{table}{hispanic-u} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:20 2020
+% Tue Oct 27 15:32:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
   \hline
  & V1 \\ 
   \hline
-FALSE & 982612 \\ 
-  TRUE & 17781 \\ 
+FALSE & 980656 \\ 
+  TRUE & 19737 \\ 
    \hline
 \end{tabular}
 \captionof{table}{CPT-plastic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:21 2020
+% Tue Oct 27 15:32:10 2020
+\bigskip\bigskip
+\centering
+\begin{tabular}{rr}
+  \hline
+ & V1 \\ 
+  \hline
+FALSE & 997761 \\ 
+  TRUE & 2632 \\ 
+   \hline
+\end{tabular}
+\captionof{table}{CPT-plastic-complex} 
+
+% latex table generated in R 4.0.1 by xtable 1.8-4 package
+% Tue Oct 27 15:32:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -181,7 +195,7 @@ FALSE & 982612 \\
 \captionof{table}{inpatient} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:21 2020
+% Tue Oct 27 15:32:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -195,7 +209,7 @@ FALSE & 982612 \\
 \captionof{table}{outpatient} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:22 2020
+% Tue Oct 27 15:32:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -209,7 +223,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-acute} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:23 2020
+% Tue Oct 27 15:32:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -223,7 +237,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-not} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:24 2020
+% Tue Oct 27 15:32:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -237,7 +251,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-emerg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:24 2020
+% Tue Oct 27 15:32:15 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -251,7 +265,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-nurse} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:25 2020
+% Tue Oct 27 15:32:15 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -265,7 +279,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:26 2020
+% Tue Oct 27 15:32:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -279,7 +293,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:26 2020
+% Tue Oct 27 15:32:17 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -292,7 +306,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-acute2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:27 2020
+% Tue Oct 27 15:32:17 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -305,7 +319,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-chronic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:27 2020
+% Tue Oct 27 15:32:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -318,7 +332,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-chronic-inter} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:29 2020
+% Tue Oct 27 15:32:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -332,7 +346,7 @@ FALSE & 982612 \\
 \captionof{table}{admit-year} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:30 2020
+% Tue Oct 27 15:32:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -345,7 +359,7 @@ FALSE & 982612 \\
 \captionof{table}{operation-year} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:30 2020
+% Tue Oct 27 15:32:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -359,7 +373,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-epi} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:31 2020
+% Tue Oct 27 15:32:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -373,7 +387,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-gen} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:31 2020
+% Tue Oct 27 15:32:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -387,7 +401,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-local} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:32 2020
+% Tue Oct 27 15:32:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -401,7 +415,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-iv} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:33 2020
+% Tue Oct 27 15:32:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -415,7 +429,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:33 2020
+% Tue Oct 27 15:32:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -429,7 +443,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:34 2020
+% Tue Oct 27 15:32:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -443,7 +457,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-reg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:34 2020
+% Tue Oct 27 15:32:25 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -457,7 +471,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-spine} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:35 2020
+% Tue Oct 27 15:32:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -471,7 +485,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-unk} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:36 2020
+% Tue Oct 27 15:32:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -484,7 +498,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-monitor} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:36 2020
+% Tue Oct 27 15:32:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -498,7 +512,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-gen} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:37 2020
+% Tue Oct 27 15:32:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -512,7 +526,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-epi} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:37 2020
+% Tue Oct 27 15:32:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -526,7 +540,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-spine} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:38 2020
+% Tue Oct 27 15:32:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -540,7 +554,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-reg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:38 2020
+% Tue Oct 27 15:32:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -554,7 +568,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-local} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:39 2020
+% Tue Oct 27 15:32:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -568,7 +582,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-monitor-iv} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:40 2020
+% Tue Oct 27 15:32:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -582,7 +596,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:40 2020
+% Tue Oct 27 15:32:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -596,7 +610,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-multiple} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:41 2020
+% Tue Oct 27 15:32:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -610,7 +624,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:42 2020
+% Tue Oct 27 15:32:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -624,7 +638,7 @@ FALSE & 982612 \\
 \captionof{table}{surgery-plastic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:42 2020
+% Tue Oct 27 15:32:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -638,7 +652,7 @@ FALSE & 982612 \\
 \captionof{table}{elective-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:43 2020
+% Tue Oct 27 15:32:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -652,7 +666,7 @@ FALSE & 982612 \\
 \captionof{table}{elective-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:43 2020
+% Tue Oct 27 15:32:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -666,7 +680,7 @@ FALSE & 982612 \\
 \captionof{table}{elective-u} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:46 2020
+% Tue Oct 27 15:32:37 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -680,7 +694,7 @@ FALSE & 982612 \\
 \captionof{table}{diabetes-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:47 2020
+% Tue Oct 27 15:32:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -694,7 +708,7 @@ FALSE & 982612 \\
 \captionof{table}{diabetes-insulin} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:48 2020
+% Tue Oct 27 15:32:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -708,7 +722,7 @@ FALSE & 982612 \\
 \captionof{table}{diabetes-noninsulin} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:48 2020
+% Tue Oct 27 15:32:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -722,7 +736,7 @@ FALSE & 982612 \\
 \captionof{table}{smoke-yes} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:49 2020
+% Tue Oct 27 15:32:40 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -736,7 +750,7 @@ FALSE & 982612 \\
 \captionof{table}{smoke-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:49 2020
+% Tue Oct 27 15:32:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -750,7 +764,7 @@ FALSE & 982612 \\
 \captionof{table}{dyspnea-rest} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:50 2020
+% Tue Oct 27 15:32:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -764,7 +778,7 @@ FALSE & 982612 \\
 \captionof{table}{dyspnea-moderate} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:51 2020
+% Tue Oct 27 15:32:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -778,7 +792,7 @@ FALSE & 982612 \\
 \captionof{table}{dyspnea-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:51 2020
+% Tue Oct 27 15:32:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -792,7 +806,7 @@ FALSE & 982612 \\
 \captionof{table}{functional-hs-independent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:52 2020
+% Tue Oct 27 15:32:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -806,7 +820,7 @@ FALSE & 982612 \\
 \captionof{table}{functional-hs-partially} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:53 2020
+% Tue Oct 27 15:32:44 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -820,7 +834,7 @@ FALSE & 982612 \\
 \captionof{table}{functional-hs-dependent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:53 2020
+% Tue Oct 27 15:32:45 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -834,7 +848,7 @@ FALSE & 982612 \\
 \captionof{table}{functional-hs-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:54 2020
+% Tue Oct 27 15:32:45 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -848,7 +862,7 @@ FALSE & 982612 \\
 \captionof{table}{ventilator-dependent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:55 2020
+% Tue Oct 27 15:32:46 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -862,7 +876,7 @@ FALSE & 982612 \\
 \captionof{table}{ventilator-independent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:55 2020
+% Tue Oct 27 15:32:47 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -876,7 +890,7 @@ FALSE & 982612 \\
 \captionof{table}{history-COPD} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:56 2020
+% Tue Oct 27 15:32:47 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -890,7 +904,7 @@ FALSE & 982612 \\
 \captionof{table}{history-noCOPD} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:57 2020
+% Tue Oct 27 15:32:48 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -904,7 +918,7 @@ FALSE & 982612 \\
 \captionof{table}{ascites-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:57 2020
+% Tue Oct 27 15:32:49 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -918,7 +932,7 @@ FALSE & 982612 \\
 \captionof{table}{ascites-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:58 2020
+% Tue Oct 27 15:32:49 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -932,7 +946,7 @@ FALSE & 982612 \\
 \captionof{table}{CHF-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:59 2020
+% Tue Oct 27 15:32:50 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -946,7 +960,7 @@ FALSE & 982612 \\
 \captionof{table}{CHF-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:15:59 2020
+% Tue Oct 27 15:32:51 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -960,7 +974,7 @@ FALSE & 982612 \\
 \captionof{table}{Hyper-med-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:00 2020
+% Tue Oct 27 15:32:51 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -974,7 +988,7 @@ FALSE & 982612 \\
 \captionof{table}{Hyper-med-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:01 2020
+% Tue Oct 27 15:32:52 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -988,7 +1002,7 @@ FALSE & 982612 \\
 \captionof{table}{Renal-fail-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:01 2020
+% Tue Oct 27 15:32:53 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1002,7 +1016,7 @@ FALSE & 982612 \\
 \captionof{table}{Renal-fail-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:02 2020
+% Tue Oct 27 15:32:53 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1016,7 +1030,7 @@ FALSE & 982612 \\
 \captionof{table}{Dialysis-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:03 2020
+% Tue Oct 27 15:32:54 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1030,7 +1044,7 @@ FALSE & 982612 \\
 \captionof{table}{Dialysis-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:03 2020
+% Tue Oct 27 15:32:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1044,7 +1058,7 @@ FALSE & 982612 \\
 \captionof{table}{Diss-cancer-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:04 2020
+% Tue Oct 27 15:32:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1058,7 +1072,7 @@ FALSE & 982612 \\
 \captionof{table}{Diss-cancer-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:04 2020
+% Tue Oct 27 15:32:56 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1072,7 +1086,7 @@ FALSE & 982612 \\
 \captionof{table}{Open-wound-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:05 2020
+% Tue Oct 27 15:32:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1086,7 +1100,7 @@ FALSE & 982612 \\
 \captionof{table}{Open-wound-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:06 2020
+% Tue Oct 27 15:32:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1100,7 +1114,7 @@ FALSE & 982612 \\
 \captionof{table}{Chronic-steroid-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:06 2020
+% Tue Oct 27 15:32:58 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1114,7 +1128,7 @@ FALSE & 982612 \\
 \captionof{table}{Chronic-steroid-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:07 2020
+% Tue Oct 27 15:32:58 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1128,7 +1142,7 @@ FALSE & 982612 \\
 \captionof{table}{Weight-loss-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:08 2020
+% Tue Oct 27 15:32:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1142,7 +1156,7 @@ FALSE & 982612 \\
 \captionof{table}{Weight-loss-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:08 2020
+% Tue Oct 27 15:33:00 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1156,7 +1170,7 @@ FALSE & 982612 \\
 \captionof{table}{Bleeding-dis-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:09 2020
+% Tue Oct 27 15:33:00 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1170,7 +1184,7 @@ FALSE & 982612 \\
 \captionof{table}{Bleeding-dis-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:10 2020
+% Tue Oct 27 15:33:01 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1184,7 +1198,7 @@ FALSE & 982612 \\
 \captionof{table}{Preop-transfusions-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:10 2020
+% Tue Oct 27 15:33:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1198,7 +1212,7 @@ FALSE & 982612 \\
 \captionof{table}{Preop-transfusions-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:11 2020
+% Tue Oct 27 15:33:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1212,7 +1226,7 @@ FALSE & 982612 \\
 \captionof{table}{Sepsis-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:12 2020
+% Tue Oct 27 15:33:03 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1226,7 +1240,7 @@ FALSE & 982612 \\
 \captionof{table}{Sepsis-sepsis} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:12 2020
+% Tue Oct 27 15:33:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1240,7 +1254,7 @@ FALSE & 982612 \\
 \captionof{table}{Sepsis-shock} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:13 2020
+% Tue Oct 27 15:33:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1254,7 +1268,7 @@ FALSE & 982612 \\
 \captionof{table}{Sepsis-sirs} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:32 2020
+% Tue Oct 27 15:33:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1268,7 +1282,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc1} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:33 2020
+% Tue Oct 27 15:33:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1282,7 +1296,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:34 2020
+% Tue Oct 27 15:33:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1296,7 +1310,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc3} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:34 2020
+% Tue Oct 27 15:33:25 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1310,7 +1324,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc4} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:35 2020
+% Tue Oct 27 15:33:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1324,7 +1338,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc5} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:35 2020
+% Tue Oct 27 15:33:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1338,7 +1352,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc6} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:36 2020
+% Tue Oct 27 15:33:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1352,7 +1366,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc7} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:37 2020
+% Tue Oct 27 15:33:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1366,7 +1380,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc8} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:37 2020
+% Tue Oct 27 15:33:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1380,7 +1394,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc9} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:38 2020
+% Tue Oct 27 15:33:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1394,7 +1408,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc10} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:38 2020
+% Tue Oct 27 15:33:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1417,7 +1431,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc-sum} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:39 2020
+% Tue Oct 27 15:33:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1431,7 +1445,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr1} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:40 2020
+% Tue Oct 27 15:33:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1445,7 +1459,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:40 2020
+% Tue Oct 27 15:33:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1459,7 +1473,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr3} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:41 2020
+% Tue Oct 27 15:33:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1473,7 +1487,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr4} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:41 2020
+% Tue Oct 27 15:33:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1487,7 +1501,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr5} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:42 2020
+% Tue Oct 27 15:33:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1501,7 +1515,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr6} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:42 2020
+% Tue Oct 27 15:33:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1515,7 +1529,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr7} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:43 2020
+% Tue Oct 27 15:33:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1529,7 +1543,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr8} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:44 2020
+% Tue Oct 27 15:33:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1543,7 +1557,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr9} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:44 2020
+% Tue Oct 27 15:33:35 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1557,7 +1571,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr10} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:45 2020
+% Tue Oct 27 15:33:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1580,7 +1594,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr-sum} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:45 2020
+% Tue Oct 27 15:33:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1594,7 +1608,7 @@ FALSE & 982612 \\
 \captionof{table}{Emergency-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:46 2020
+% Tue Oct 27 15:33:37 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1608,7 +1622,7 @@ FALSE & 982612 \\
 \captionof{table}{Emergency-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:47 2020
+% Tue Oct 27 15:33:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1622,7 +1636,7 @@ FALSE & 982612 \\
 \captionof{table}{Wound-clean} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:47 2020
+% Tue Oct 27 15:33:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1636,7 +1650,7 @@ FALSE & 982612 \\
 \captionof{table}{Wound-clcontn} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:48 2020
+% Tue Oct 27 15:33:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1650,7 +1664,7 @@ FALSE & 982612 \\
 \captionof{table}{Wound-contn} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:49 2020
+% Tue Oct 27 15:33:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1664,7 +1678,7 @@ FALSE & 982612 \\
 \captionof{table}{Wound-dirty} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:49 2020
+% Tue Oct 27 15:33:40 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1678,7 +1692,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:50 2020
+% Tue Oct 27 15:33:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1692,7 +1706,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-mild} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:51 2020
+% Tue Oct 27 15:33:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1706,7 +1720,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-severe} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:51 2020
+% Tue Oct 27 15:33:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1720,7 +1734,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-life} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:52 2020
+% Tue Oct 27 15:33:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1734,7 +1748,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-moribund} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:52 2020
+% Tue Oct 27 15:33:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1748,7 +1762,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:16:59 2020
+% Tue Oct 27 15:33:44 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
