--- a/tables/postPredictors17.tex
+++ b/tables/postPredictors17.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:51 2020
+% Tue Oct 27 15:37:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -13,7 +13,7 @@
 \captionof{table}{female} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:52 2020
+% Tue Oct 27 15:37:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -27,7 +27,7 @@
 \captionof{table}{male} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:52 2020
+% Tue Oct 27 15:37:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -41,7 +41,7 @@
 \captionof{table}{race-asian} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:53 2020
+% Tue Oct 27 15:37:44 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -55,7 +55,7 @@
 \captionof{table}{race-black} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:53 2020
+% Tue Oct 27 15:37:45 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -69,7 +69,7 @@
 \captionof{table}{race-nativeam} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:54 2020
+% Tue Oct 27 15:37:45 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -83,7 +83,7 @@
 \captionof{table}{race-aip} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:55 2020
+% Tue Oct 27 15:37:46 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -97,7 +97,7 @@
 \captionof{table}{race-white} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:55 2020
+% Tue Oct 27 15:37:46 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -111,7 +111,7 @@
 \captionof{table}{race-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:56 2020
+% Tue Oct 27 15:37:47 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -125,7 +125,7 @@
 \captionof{table}{hispanic-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:57 2020
+% Tue Oct 27 15:37:48 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -139,7 +139,7 @@
 \captionof{table}{hispanic-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:57 2020
+% Tue Oct 27 15:37:49 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -153,21 +153,35 @@
 \captionof{table}{hispanic-u} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:58 2020
+% Tue Oct 27 15:37:50 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
   \hline
  & V1 \\ 
   \hline
-FALSE & 1009815 \\ 
-  TRUE & 18898 \\ 
+FALSE & 1007837 \\ 
+  TRUE & 20876 \\ 
    \hline
 \end{tabular}
 \captionof{table}{CPT-plastic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:20:59 2020
+% Tue Oct 27 15:37:50 2020
+\bigskip\bigskip
+\centering
+\begin{tabular}{rr}
+  \hline
+ & V1 \\ 
+  \hline
+FALSE & 1025833 \\ 
+  TRUE & 2880 \\ 
+   \hline
+\end{tabular}
+\captionof{table}{CPT-plastic-complex} 
+
+% latex table generated in R 4.0.1 by xtable 1.8-4 package
+% Tue Oct 27 15:37:51 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -181,7 +195,7 @@ FALSE & 1009815 \\
 \captionof{table}{inpatient} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:00 2020
+% Tue Oct 27 15:37:51 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -195,7 +209,7 @@ FALSE & 1009815 \\
 \captionof{table}{outpatient} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:01 2020
+% Tue Oct 27 15:37:52 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -209,7 +223,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-acute} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:01 2020
+% Tue Oct 27 15:37:53 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -223,7 +237,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-not} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:02 2020
+% Tue Oct 27 15:37:53 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -237,7 +251,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-emerg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:03 2020
+% Tue Oct 27 15:37:54 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -251,7 +265,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-nurse} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:03 2020
+% Tue Oct 27 15:37:54 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -265,7 +279,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:04 2020
+% Tue Oct 27 15:37:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -279,7 +293,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:04 2020
+% Tue Oct 27 15:37:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -292,7 +306,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-acute2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:05 2020
+% Tue Oct 27 15:37:56 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -305,7 +319,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-chronic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:06 2020
+% Tue Oct 27 15:37:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -318,7 +332,7 @@ FALSE & 1009815 \\
 \captionof{table}{trans-chronic-inter} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:07 2020
+% Tue Oct 27 15:37:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -332,7 +346,7 @@ FALSE & 1009815 \\
 \captionof{table}{admit-year} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:08 2020
+% Tue Oct 27 15:38:00 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -345,7 +359,7 @@ FALSE & 1009815 \\
 \captionof{table}{operation-year} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:09 2020
+% Tue Oct 27 15:38:01 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -359,7 +373,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-epi} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:09 2020
+% Tue Oct 27 15:38:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -373,7 +387,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-gen} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:10 2020
+% Tue Oct 27 15:38:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -387,7 +401,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-local} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:11 2020
+% Tue Oct 27 15:38:03 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -401,7 +415,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-iv} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:11 2020
+% Tue Oct 27 15:38:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -415,7 +429,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:12 2020
+% Tue Oct 27 15:38:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -429,7 +443,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:12 2020
+% Tue Oct 27 15:38:05 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -443,7 +457,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-reg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:13 2020
+% Tue Oct 27 15:38:05 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -457,7 +471,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-spine} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:14 2020
+% Tue Oct 27 15:38:06 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -471,7 +485,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-unk} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:14 2020
+% Tue Oct 27 15:38:07 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -484,7 +498,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-monitor} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:15 2020
+% Tue Oct 27 15:38:07 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -498,7 +512,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-gen} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:15 2020
+% Tue Oct 27 15:38:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -512,7 +526,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-epi} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:17 2020
+% Tue Oct 27 15:38:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -526,7 +540,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-spine} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:17 2020
+% Tue Oct 27 15:38:09 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -540,7 +554,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-reg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:18 2020
+% Tue Oct 27 15:38:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -554,7 +568,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-local} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:19 2020
+% Tue Oct 27 15:38:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -568,7 +582,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-monitor-iv} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:19 2020
+% Tue Oct 27 15:38:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -582,7 +596,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:20 2020
+% Tue Oct 27 15:38:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -596,7 +610,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-multiple} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:21 2020
+% Tue Oct 27 15:38:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -610,7 +624,7 @@ FALSE & 1009815 \\
 \captionof{table}{anesth-other-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:21 2020
+% Tue Oct 27 15:38:13 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -624,7 +638,7 @@ FALSE & 1009815 \\
 \captionof{table}{surgery-plastic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:22 2020
+% Tue Oct 27 15:38:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -638,7 +652,7 @@ FALSE & 1009815 \\
 \captionof{table}{elective-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:23 2020
+% Tue Oct 27 15:38:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -652,7 +666,7 @@ FALSE & 1009815 \\
 \captionof{table}{elective-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:23 2020
+% Tue Oct 27 15:38:15 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -666,7 +680,7 @@ FALSE & 1009815 \\
 \captionof{table}{elective-u} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:26 2020
+% Tue Oct 27 15:38:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -680,7 +694,7 @@ FALSE & 1009815 \\
 \captionof{table}{diabetes-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:27 2020
+% Tue Oct 27 15:38:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -694,7 +708,7 @@ FALSE & 1009815 \\
 \captionof{table}{diabetes-insulin} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:27 2020
+% Tue Oct 27 15:38:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -708,7 +722,7 @@ FALSE & 1009815 \\
 \captionof{table}{diabetes-noninsulin} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:28 2020
+% Tue Oct 27 15:38:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -722,7 +736,7 @@ FALSE & 1009815 \\
 \captionof{table}{smoke-yes} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:29 2020
+% Tue Oct 27 15:38:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -736,7 +750,7 @@ FALSE & 1009815 \\
 \captionof{table}{smoke-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:29 2020
+% Tue Oct 27 15:38:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -750,7 +764,7 @@ FALSE & 1009815 \\
 \captionof{table}{dyspnea-rest} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:30 2020
+% Tue Oct 27 15:38:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -764,7 +778,7 @@ FALSE & 1009815 \\
 \captionof{table}{dyspnea-moderate} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:31 2020
+% Tue Oct 27 15:38:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -778,7 +792,7 @@ FALSE & 1009815 \\
 \captionof{table}{dyspnea-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:31 2020
+% Tue Oct 27 15:38:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -792,7 +806,7 @@ FALSE & 1009815 \\
 \captionof{table}{functional-hs-independent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:32 2020
+% Tue Oct 27 15:38:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -806,7 +820,7 @@ FALSE & 1009815 \\
 \captionof{table}{functional-hs-partially} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:33 2020
+% Tue Oct 27 15:38:25 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -820,7 +834,7 @@ FALSE & 1009815 \\
 \captionof{table}{functional-hs-dependent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:33 2020
+% Tue Oct 27 15:38:25 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -834,7 +848,7 @@ FALSE & 1009815 \\
 \captionof{table}{functional-hs-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:34 2020
+% Tue Oct 27 15:38:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -848,7 +862,7 @@ FALSE & 1009815 \\
 \captionof{table}{ventilator-dependent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:35 2020
+% Tue Oct 27 15:38:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -862,7 +876,7 @@ FALSE & 1009815 \\
 \captionof{table}{ventilator-independent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:35 2020
+% Tue Oct 27 15:38:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -876,7 +890,7 @@ FALSE & 1009815 \\
 \captionof{table}{history-COPD} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:36 2020
+% Tue Oct 27 15:38:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -890,7 +904,7 @@ FALSE & 1009815 \\
 \captionof{table}{history-noCOPD} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:37 2020
+% Tue Oct 27 15:38:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -904,7 +918,7 @@ FALSE & 1009815 \\
 \captionof{table}{ascites-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:37 2020
+% Tue Oct 27 15:38:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -918,7 +932,7 @@ FALSE & 1009815 \\
 \captionof{table}{ascites-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:38 2020
+% Tue Oct 27 15:38:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -932,7 +946,7 @@ FALSE & 1009815 \\
 \captionof{table}{CHF-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:39 2020
+% Tue Oct 27 15:38:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -946,7 +960,7 @@ FALSE & 1009815 \\
 \captionof{table}{CHF-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:39 2020
+% Tue Oct 27 15:38:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -960,7 +974,7 @@ FALSE & 1009815 \\
 \captionof{table}{Hyper-med-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:40 2020
+% Tue Oct 27 15:38:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -974,7 +988,7 @@ FALSE & 1009815 \\
 \captionof{table}{Hyper-med-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:41 2020
+% Tue Oct 27 15:38:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -988,7 +1002,7 @@ FALSE & 1009815 \\
 \captionof{table}{Renal-fail-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:41 2020
+% Tue Oct 27 15:38:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1002,7 +1016,7 @@ FALSE & 1009815 \\
 \captionof{table}{Renal-fail-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:42 2020
+% Tue Oct 27 15:38:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1016,7 +1030,7 @@ FALSE & 1009815 \\
 \captionof{table}{Dialysis-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:43 2020
+% Tue Oct 27 15:38:35 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1030,7 +1044,7 @@ FALSE & 1009815 \\
 \captionof{table}{Dialysis-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:43 2020
+% Tue Oct 27 15:38:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1044,7 +1058,7 @@ FALSE & 1009815 \\
 \captionof{table}{Diss-cancer-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:44 2020
+% Tue Oct 27 15:38:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1058,7 +1072,7 @@ FALSE & 1009815 \\
 \captionof{table}{Diss-cancer-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:45 2020
+% Tue Oct 27 15:38:37 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1072,7 +1086,7 @@ FALSE & 1009815 \\
 \captionof{table}{Open-wound-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:45 2020
+% Tue Oct 27 15:38:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1086,7 +1100,7 @@ FALSE & 1009815 \\
 \captionof{table}{Open-wound-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:46 2020
+% Tue Oct 27 15:38:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1100,7 +1114,7 @@ FALSE & 1009815 \\
 \captionof{table}{Chronic-steroid-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:47 2020
+% Tue Oct 27 15:38:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1114,7 +1128,7 @@ FALSE & 1009815 \\
 \captionof{table}{Chronic-steroid-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:47 2020
+% Tue Oct 27 15:38:40 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1128,7 +1142,7 @@ FALSE & 1009815 \\
 \captionof{table}{Weight-loss-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:48 2020
+% Tue Oct 27 15:38:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1142,7 +1156,7 @@ FALSE & 1009815 \\
 \captionof{table}{Weight-loss-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:49 2020
+% Tue Oct 27 15:38:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1156,7 +1170,7 @@ FALSE & 1009815 \\
 \captionof{table}{Bleeding-dis-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:49 2020
+% Tue Oct 27 15:38:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1170,7 +1184,7 @@ FALSE & 1009815 \\
 \captionof{table}{Bleeding-dis-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:50 2020
+% Tue Oct 27 15:38:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1184,7 +1198,7 @@ FALSE & 1009815 \\
 \captionof{table}{Preop-transfusions-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:51 2020
+% Tue Oct 27 15:38:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1198,7 +1212,7 @@ FALSE & 1009815 \\
 \captionof{table}{Preop-transfusions-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:51 2020
+% Tue Oct 27 15:38:44 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1212,7 +1226,7 @@ FALSE & 1009815 \\
 \captionof{table}{Sepsis-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:52 2020
+% Tue Oct 27 15:38:45 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1226,7 +1240,7 @@ FALSE & 1009815 \\
 \captionof{table}{Sepsis-sepsis} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:53 2020
+% Tue Oct 27 15:38:46 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1240,7 +1254,7 @@ FALSE & 1009815 \\
 \captionof{table}{Sepsis-shock} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:21:53 2020
+% Tue Oct 27 15:38:46 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1254,7 +1268,7 @@ FALSE & 1009815 \\
 \captionof{table}{Sepsis-sirs} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:02 2020
+% Tue Oct 27 15:38:56 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1267,7 +1281,7 @@ FALSE & 1009815 \\
 \captionof{table}{days-pt-preop-lab} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:13 2020
+% Tue Oct 27 15:39:07 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1280,7 +1294,7 @@ FALSE & 1009815 \\
 \captionof{table}{PT} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:14 2020
+% Tue Oct 27 15:39:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1294,7 +1308,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc1} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:14 2020
+% Tue Oct 27 15:39:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1308,7 +1322,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:15 2020
+% Tue Oct 27 15:39:09 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1322,7 +1336,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc3} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:15 2020
+% Tue Oct 27 15:39:09 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1336,7 +1350,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc4} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:16 2020
+% Tue Oct 27 15:39:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1350,7 +1364,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc5} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:17 2020
+% Tue Oct 27 15:39:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1364,7 +1378,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc6} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:17 2020
+% Tue Oct 27 15:39:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1378,7 +1392,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc7} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:18 2020
+% Tue Oct 27 15:39:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1392,7 +1406,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc8} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:18 2020
+% Tue Oct 27 15:39:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1406,7 +1420,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc9} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:19 2020
+% Tue Oct 27 15:39:13 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1420,7 +1434,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc10} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:20 2020
+% Tue Oct 27 15:39:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1443,7 +1457,7 @@ FALSE & 1009815 \\
 \captionof{table}{other-proc-sum} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:20 2020
+% Tue Oct 27 15:39:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1457,7 +1471,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr1} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:21 2020
+% Tue Oct 27 15:39:15 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1471,7 +1485,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:22 2020
+% Tue Oct 27 15:39:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1485,7 +1499,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr3} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:22 2020
+% Tue Oct 27 15:39:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1499,7 +1513,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr4} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:23 2020
+% Tue Oct 27 15:39:17 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1513,7 +1527,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr5} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:23 2020
+% Tue Oct 27 15:39:17 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1527,7 +1541,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr6} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:24 2020
+% Tue Oct 27 15:39:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1541,7 +1555,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr7} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:25 2020
+% Tue Oct 27 15:39:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1555,7 +1569,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr8} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:25 2020
+% Tue Oct 27 15:39:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1569,7 +1583,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr9} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:26 2020
+% Tue Oct 27 15:39:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1583,7 +1597,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr10} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:26 2020
+% Tue Oct 27 15:39:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1606,7 +1620,7 @@ FALSE & 1009815 \\
 \captionof{table}{concurr-sum} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:27 2020
+% Tue Oct 27 15:39:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1620,7 +1634,7 @@ FALSE & 1009815 \\
 \captionof{table}{Emergency-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:28 2020
+% Tue Oct 27 15:39:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1634,7 +1648,7 @@ FALSE & 1009815 \\
 \captionof{table}{Emergency-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:28 2020
+% Tue Oct 27 15:39:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1648,7 +1662,7 @@ FALSE & 1009815 \\
 \captionof{table}{Wound-clean} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:29 2020
+% Tue Oct 27 15:39:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1662,7 +1676,7 @@ FALSE & 1009815 \\
 \captionof{table}{Wound-clcontn} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:30 2020
+% Tue Oct 27 15:39:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1676,7 +1690,7 @@ FALSE & 1009815 \\
 \captionof{table}{Wound-contn} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:30 2020
+% Tue Oct 27 15:39:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1690,7 +1704,7 @@ FALSE & 1009815 \\
 \captionof{table}{Wound-dirty} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:31 2020
+% Tue Oct 27 15:39:25 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1704,7 +1718,7 @@ FALSE & 1009815 \\
 \captionof{table}{ASA-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:32 2020
+% Tue Oct 27 15:39:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1718,7 +1732,7 @@ FALSE & 1009815 \\
 \captionof{table}{ASA-mild} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:32 2020
+% Tue Oct 27 15:39:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1732,7 +1746,7 @@ FALSE & 1009815 \\
 \captionof{table}{ASA-severe} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:33 2020
+% Tue Oct 27 15:39:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1746,7 +1760,7 @@ FALSE & 1009815 \\
 \captionof{table}{ASA-life} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:33 2020
+% Tue Oct 27 15:39:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1760,7 +1774,7 @@ FALSE & 1009815 \\
 \captionof{table}{ASA-moribund} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:34 2020
+% Tue Oct 27 15:39:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1774,7 +1788,7 @@ FALSE & 1009815 \\
 \captionof{table}{ASA-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:22:40 2020
+% Tue Oct 27 15:39:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
