--- a/tables/postPredictors18.tex
+++ b/tables/postPredictors18.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:33 2020
+% Tue Oct 27 15:43:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -13,7 +13,7 @@
 \captionof{table}{female} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:34 2020
+% Tue Oct 27 15:43:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -27,7 +27,7 @@
 \captionof{table}{male} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:35 2020
+% Tue Oct 27 15:43:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -41,7 +41,7 @@
 \captionof{table}{race-asian} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:35 2020
+% Tue Oct 27 15:43:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -55,7 +55,7 @@
 \captionof{table}{race-black} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:36 2020
+% Tue Oct 27 15:43:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -69,7 +69,7 @@
 \captionof{table}{race-nativeam} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:37 2020
+% Tue Oct 27 15:43:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -83,7 +83,7 @@
 \captionof{table}{race-aip} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:37 2020
+% Tue Oct 27 15:43:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -97,7 +97,7 @@
 \captionof{table}{race-white} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:38 2020
+% Tue Oct 27 15:43:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -111,7 +111,7 @@
 \captionof{table}{race-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:39 2020
+% Tue Oct 27 15:43:35 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -125,7 +125,7 @@
 \captionof{table}{hispanic-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:39 2020
+% Tue Oct 27 15:43:35 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -139,7 +139,7 @@
 \captionof{table}{hispanic-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:40 2020
+% Tue Oct 27 15:43:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -153,21 +153,35 @@
 \captionof{table}{hispanic-u} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:41 2020
+% Tue Oct 27 15:43:37 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
   \hline
  & V1 \\ 
   \hline
-FALSE & 1000665 \\ 
-  TRUE & 19846 \\ 
+FALSE & 998620 \\ 
+  TRUE & 21891 \\ 
    \hline
 \end{tabular}
 \captionof{table}{CPT-plastic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:42 2020
+% Tue Oct 27 15:43:37 2020
+\bigskip\bigskip
+\centering
+\begin{tabular}{rr}
+  \hline
+ & V1 \\ 
+  \hline
+FALSE & 1017451 \\ 
+  TRUE & 3060 \\ 
+   \hline
+\end{tabular}
+\captionof{table}{CPT-plastic-complex} 
+
+% latex table generated in R 4.0.1 by xtable 1.8-4 package
+% Tue Oct 27 15:43:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -181,7 +195,7 @@ FALSE & 1000665 \\
 \captionof{table}{inpatient} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:42 2020
+% Tue Oct 27 15:43:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -195,7 +209,7 @@ FALSE & 1000665 \\
 \captionof{table}{outpatient} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:43 2020
+% Tue Oct 27 15:43:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -209,7 +223,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-acute} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:44 2020
+% Tue Oct 27 15:43:40 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -223,7 +237,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-not} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:44 2020
+% Tue Oct 27 15:43:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -237,7 +251,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-emerg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:45 2020
+% Tue Oct 27 15:43:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -251,7 +265,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-nurse} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:46 2020
+% Tue Oct 27 15:43:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -265,7 +279,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:47 2020
+% Tue Oct 27 15:43:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -279,7 +293,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:47 2020
+% Tue Oct 27 15:43:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -292,7 +306,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-acute2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:48 2020
+% Tue Oct 27 15:43:44 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -305,7 +319,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-chronic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:48 2020
+% Tue Oct 27 15:43:44 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -318,7 +332,7 @@ FALSE & 1000665 \\
 \captionof{table}{trans-chronic-inter} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:50 2020
+% Tue Oct 27 15:43:46 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -332,7 +346,7 @@ FALSE & 1000665 \\
 \captionof{table}{admit-year} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:51 2020
+% Tue Oct 27 15:43:47 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -345,7 +359,7 @@ FALSE & 1000665 \\
 \captionof{table}{operation-year} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:51 2020
+% Tue Oct 27 15:43:47 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -359,7 +373,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-epi} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:52 2020
+% Tue Oct 27 15:43:48 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -373,7 +387,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-gen} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:53 2020
+% Tue Oct 27 15:43:49 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -387,7 +401,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-local} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:53 2020
+% Tue Oct 27 15:43:49 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -401,7 +415,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-iv} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:54 2020
+% Tue Oct 27 15:43:50 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -415,7 +429,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:54 2020
+% Tue Oct 27 15:43:50 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -429,7 +443,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:55 2020
+% Tue Oct 27 15:43:51 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -443,7 +457,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-reg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:56 2020
+% Tue Oct 27 15:43:52 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -457,7 +471,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-spine} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:56 2020
+% Tue Oct 27 15:43:52 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -471,7 +485,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-unk} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:57 2020
+% Tue Oct 27 15:43:53 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -484,7 +498,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-monitor} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:57 2020
+% Tue Oct 27 15:43:54 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -497,7 +511,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-gen} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:58 2020
+% Tue Oct 27 15:43:54 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -510,7 +524,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-epi} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:59 2020
+% Tue Oct 27 15:43:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -523,7 +537,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-spine} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:26:59 2020
+% Tue Oct 27 15:43:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -536,7 +550,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-reg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:00 2020
+% Tue Oct 27 15:43:56 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -549,7 +563,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-local} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:00 2020
+% Tue Oct 27 15:43:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -562,7 +576,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-monitor-iv} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:01 2020
+% Tue Oct 27 15:43:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -575,7 +589,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:02 2020
+% Tue Oct 27 15:43:58 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -588,7 +602,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-multiple} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:02 2020
+% Tue Oct 27 15:43:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -601,7 +615,7 @@ FALSE & 1000665 \\
 \captionof{table}{anesth-other-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:03 2020
+% Tue Oct 27 15:43:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -615,7 +629,7 @@ FALSE & 1000665 \\
 \captionof{table}{surgery-plastic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:04 2020
+% Tue Oct 27 15:44:00 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -629,7 +643,7 @@ FALSE & 1000665 \\
 \captionof{table}{elective-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:04 2020
+% Tue Oct 27 15:44:01 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -643,7 +657,7 @@ FALSE & 1000665 \\
 \captionof{table}{elective-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:05 2020
+% Tue Oct 27 15:44:01 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -657,7 +671,7 @@ FALSE & 1000665 \\
 \captionof{table}{elective-u} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:08 2020
+% Tue Oct 27 15:44:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -671,7 +685,7 @@ FALSE & 1000665 \\
 \captionof{table}{diabetes-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:08 2020
+% Tue Oct 27 15:44:05 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -685,7 +699,7 @@ FALSE & 1000665 \\
 \captionof{table}{diabetes-insulin} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:09 2020
+% Tue Oct 27 15:44:05 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -699,7 +713,7 @@ FALSE & 1000665 \\
 \captionof{table}{diabetes-noninsulin} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:10 2020
+% Tue Oct 27 15:44:06 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -713,7 +727,7 @@ FALSE & 1000665 \\
 \captionof{table}{smoke-yes} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:10 2020
+% Tue Oct 27 15:44:07 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -727,7 +741,7 @@ FALSE & 1000665 \\
 \captionof{table}{smoke-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:11 2020
+% Tue Oct 27 15:44:07 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -741,7 +755,7 @@ FALSE & 1000665 \\
 \captionof{table}{dyspnea-rest} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:11 2020
+% Tue Oct 27 15:44:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -755,7 +769,7 @@ FALSE & 1000665 \\
 \captionof{table}{dyspnea-moderate} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:12 2020
+% Tue Oct 27 15:44:09 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -769,7 +783,7 @@ FALSE & 1000665 \\
 \captionof{table}{dyspnea-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:13 2020
+% Tue Oct 27 15:44:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -783,7 +797,7 @@ FALSE & 1000665 \\
 \captionof{table}{functional-hs-independent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:14 2020
+% Tue Oct 27 15:44:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -797,7 +811,7 @@ FALSE & 1000665 \\
 \captionof{table}{functional-hs-partially} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:14 2020
+% Tue Oct 27 15:44:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -811,7 +825,7 @@ FALSE & 1000665 \\
 \captionof{table}{functional-hs-dependent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:15 2020
+% Tue Oct 27 15:44:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -825,7 +839,7 @@ FALSE & 1000665 \\
 \captionof{table}{functional-hs-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:16 2020
+% Tue Oct 27 15:44:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -839,7 +853,7 @@ FALSE & 1000665 \\
 \captionof{table}{ventilator-dependent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:16 2020
+% Tue Oct 27 15:44:13 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -853,7 +867,7 @@ FALSE & 1000665 \\
 \captionof{table}{ventilator-independent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:17 2020
+% Tue Oct 27 15:44:13 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -867,7 +881,7 @@ FALSE & 1000665 \\
 \captionof{table}{history-COPD} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:18 2020
+% Tue Oct 27 15:44:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -881,7 +895,7 @@ FALSE & 1000665 \\
 \captionof{table}{history-noCOPD} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:18 2020
+% Tue Oct 27 15:44:15 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -895,7 +909,7 @@ FALSE & 1000665 \\
 \captionof{table}{ascites-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:19 2020
+% Tue Oct 27 15:44:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -909,7 +923,7 @@ FALSE & 1000665 \\
 \captionof{table}{ascites-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:19 2020
+% Tue Oct 27 15:44:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -923,7 +937,7 @@ FALSE & 1000665 \\
 \captionof{table}{CHF-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:20 2020
+% Tue Oct 27 15:44:17 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -937,7 +951,7 @@ FALSE & 1000665 \\
 \captionof{table}{CHF-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:21 2020
+% Tue Oct 27 15:44:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -951,7 +965,7 @@ FALSE & 1000665 \\
 \captionof{table}{Hyper-med-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:22 2020
+% Tue Oct 27 15:44:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -965,7 +979,7 @@ FALSE & 1000665 \\
 \captionof{table}{Hyper-med-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:22 2020
+% Tue Oct 27 15:44:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -979,7 +993,7 @@ FALSE & 1000665 \\
 \captionof{table}{Renal-fail-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:23 2020
+% Tue Oct 27 15:44:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -993,7 +1007,7 @@ FALSE & 1000665 \\
 \captionof{table}{Renal-fail-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:23 2020
+% Tue Oct 27 15:44:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1007,7 +1021,7 @@ FALSE & 1000665 \\
 \captionof{table}{Dialysis-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:24 2020
+% Tue Oct 27 15:44:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1021,7 +1035,7 @@ FALSE & 1000665 \\
 \captionof{table}{Dialysis-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:25 2020
+% Tue Oct 27 15:44:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1035,7 +1049,7 @@ FALSE & 1000665 \\
 \captionof{table}{Diss-cancer-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:26 2020
+% Tue Oct 27 15:44:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1049,7 +1063,7 @@ FALSE & 1000665 \\
 \captionof{table}{Diss-cancer-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:26 2020
+% Tue Oct 27 15:44:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1063,7 +1077,7 @@ FALSE & 1000665 \\
 \captionof{table}{Open-wound-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:27 2020
+% Tue Oct 27 15:44:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1077,7 +1091,7 @@ FALSE & 1000665 \\
 \captionof{table}{Open-wound-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:27 2020
+% Tue Oct 27 15:44:25 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1091,7 +1105,7 @@ FALSE & 1000665 \\
 \captionof{table}{Chronic-steroid-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:28 2020
+% Tue Oct 27 15:44:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1105,7 +1119,7 @@ FALSE & 1000665 \\
 \captionof{table}{Chronic-steroid-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:29 2020
+% Tue Oct 27 15:44:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1119,7 +1133,7 @@ FALSE & 1000665 \\
 \captionof{table}{Weight-loss-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:29 2020
+% Tue Oct 27 15:44:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1133,7 +1147,7 @@ FALSE & 1000665 \\
 \captionof{table}{Weight-loss-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:30 2020
+% Tue Oct 27 15:44:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1147,7 +1161,7 @@ FALSE & 1000665 \\
 \captionof{table}{Bleeding-dis-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:31 2020
+% Tue Oct 27 15:44:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1161,7 +1175,7 @@ FALSE & 1000665 \\
 \captionof{table}{Bleeding-dis-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:31 2020
+% Tue Oct 27 15:44:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1175,7 +1189,7 @@ FALSE & 1000665 \\
 \captionof{table}{Preop-transfusions-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:32 2020
+% Tue Oct 27 15:44:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1189,7 +1203,7 @@ FALSE & 1000665 \\
 \captionof{table}{Preop-transfusions-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:33 2020
+% Tue Oct 27 15:44:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1203,7 +1217,7 @@ FALSE & 1000665 \\
 \captionof{table}{Sepsis-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:33 2020
+% Tue Oct 27 15:44:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1217,7 +1231,7 @@ FALSE & 1000665 \\
 \captionof{table}{Sepsis-sepsis} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:34 2020
+% Tue Oct 27 15:44:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1231,7 +1245,7 @@ FALSE & 1000665 \\
 \captionof{table}{Sepsis-shock} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:35 2020
+% Tue Oct 27 15:44:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1245,7 +1259,7 @@ FALSE & 1000665 \\
 \captionof{table}{Sepsis-sirs} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:43 2020
+% Tue Oct 27 15:44:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1258,7 +1272,7 @@ FALSE & 1000665 \\
 \captionof{table}{days-pt-preop-lab} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:54 2020
+% Tue Oct 27 15:44:54 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1271,7 +1285,7 @@ FALSE & 1000665 \\
 \captionof{table}{PT} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:55 2020
+% Tue Oct 27 15:44:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1285,7 +1299,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc1} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:55 2020
+% Tue Oct 27 15:44:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1299,7 +1313,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:56 2020
+% Tue Oct 27 15:44:56 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1313,7 +1327,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc3} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:56 2020
+% Tue Oct 27 15:44:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1327,7 +1341,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc4} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:57 2020
+% Tue Oct 27 15:44:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1341,7 +1355,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc5} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:58 2020
+% Tue Oct 27 15:44:58 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1355,7 +1369,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc6} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:58 2020
+% Tue Oct 27 15:44:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1369,7 +1383,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc7} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:59 2020
+% Tue Oct 27 15:45:00 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1383,7 +1397,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc8} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:27:59 2020
+% Tue Oct 27 15:45:00 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1397,7 +1411,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc9} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:00 2020
+% Tue Oct 27 15:45:01 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1411,7 +1425,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc10} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:01 2020
+% Tue Oct 27 15:45:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1434,7 +1448,7 @@ FALSE & 1000665 \\
 \captionof{table}{other-proc-sum} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:01 2020
+% Tue Oct 27 15:45:03 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1448,7 +1462,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr1} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:02 2020
+% Tue Oct 27 15:45:03 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1462,7 +1476,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:02 2020
+% Tue Oct 27 15:45:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1476,7 +1490,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr3} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:03 2020
+% Tue Oct 27 15:45:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1490,7 +1504,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr4} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:04 2020
+% Tue Oct 27 15:45:05 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1504,7 +1518,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr5} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:04 2020
+% Tue Oct 27 15:45:06 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1518,7 +1532,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr6} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:05 2020
+% Tue Oct 27 15:45:06 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1532,7 +1546,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr7} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:05 2020
+% Tue Oct 27 15:45:07 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1546,7 +1560,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr8} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:06 2020
+% Tue Oct 27 15:45:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1560,7 +1574,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr9} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:07 2020
+% Tue Oct 27 15:45:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1574,7 +1588,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr10} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:07 2020
+% Tue Oct 27 15:45:09 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1597,7 +1611,7 @@ FALSE & 1000665 \\
 \captionof{table}{concurr-sum} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:08 2020
+% Tue Oct 27 15:45:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1611,7 +1625,7 @@ FALSE & 1000665 \\
 \captionof{table}{Emergency-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:09 2020
+% Tue Oct 27 15:45:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1625,7 +1639,7 @@ FALSE & 1000665 \\
 \captionof{table}{Emergency-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:09 2020
+% Tue Oct 27 15:45:11 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1639,7 +1653,7 @@ FALSE & 1000665 \\
 \captionof{table}{Wound-clean} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:10 2020
+% Tue Oct 27 15:45:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1653,7 +1667,7 @@ FALSE & 1000665 \\
 \captionof{table}{Wound-clcontn} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:11 2020
+% Tue Oct 27 15:45:13 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1667,7 +1681,7 @@ FALSE & 1000665 \\
 \captionof{table}{Wound-contn} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:11 2020
+% Tue Oct 27 15:45:13 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1681,7 +1695,7 @@ FALSE & 1000665 \\
 \captionof{table}{Wound-dirty} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:12 2020
+% Tue Oct 27 15:45:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1695,7 +1709,7 @@ FALSE & 1000665 \\
 \captionof{table}{ASA-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:12 2020
+% Tue Oct 27 15:45:15 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1709,7 +1723,7 @@ FALSE & 1000665 \\
 \captionof{table}{ASA-mild} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:13 2020
+% Tue Oct 27 15:45:15 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1723,7 +1737,7 @@ FALSE & 1000665 \\
 \captionof{table}{ASA-severe} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:14 2020
+% Tue Oct 27 15:45:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1737,7 +1751,7 @@ FALSE & 1000665 \\
 \captionof{table}{ASA-life} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:14 2020
+% Tue Oct 27 15:45:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1751,7 +1765,7 @@ FALSE & 1000665 \\
 \captionof{table}{ASA-moribund} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:15 2020
+% Tue Oct 27 15:45:17 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1765,7 +1779,7 @@ FALSE & 1000665 \\
 \captionof{table}{ASA-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Fri Aug 14 17:28:21 2020
+% Tue Oct 27 15:45:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
